Update demo and docs.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="utf-8">
 <style>
+	#audio,
+	#container {
+		width: 640px;
+	}
 	#container canvas {
 		display: block;
-/*		width: 100%; */
-	}
-	#audio {
-		width: 600px;
 	}
 </style>
 </head>
@@ -48,7 +48,7 @@
 	</p>
 
 	<p>
-		Oscillator tones: <strong>(WARNING! LOUD VOLUME!)</strong>
+		Oscillator tones: <strong>(WARNING! Loud volume!)</strong>
 		<button id="btn_silence">Oscillator OFF</button> &mdash;
 		<button id="btn_B2">123.47 Hz (B2) square wave</button>
 		<button id="btn_C4">261.63 Hz (C4) sawtooth wave</button>
