--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 		<button id="btn_leds">LEDs</button>
 		<button id="btn_scale">Scale</button>
 		<button id="btn_lores">Lo-Res</button>
+		<button id="btn_fps">Frame rate</button>
 	</p>
 
 	<p>
