--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>audioMotion-analyzer.js Demo</title>
+	<title>audioMotion-analyzer Demo</title>
 	<link href="https://fonts.googleapis.com/css?family=Orbitron:700" rel="stylesheet">
 	<style>
 		button, select {
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-	<h1>audioMotion-analyzer.js Demo</h1>
+	<h1>audioMotion-analyzer Demo</h1>
 
 	<div id="container"></div>
 	<audio id="audio" src="https://ia600504.us.archive.org/5/items/ChuckBerry-SchoolDays/ChuckBerry-SchoolDays.mp3" controls crossorigin="anonymous"></audio>
@@ -74,7 +74,7 @@
 		<button class="tones" data-freq="3520" data-wave="sine">3520 Hz (A7) sine wave</button><br>
 	</p>
 
-	<script src="main.js" type="module"></script>
+	<script src="demo.js" type="module"></script>
 
 </body>
 </html>
