Add webpack to build demo script.

--- a/demo/index.html
+++ b/demo/index.html
@@ -74,7 +74,7 @@
 		<button class="tones" data-freq="3520" data-wave="sine">3520 Hz (A7) sine wave</button><br>
 	</p>
 
-	<script src="demo.js" type="module"></script>
+	<script src="demo.js"></script>
 
 </body>
 </html>
