Allow to load songs in the demo; improved demo code comments.

--- a/demo/index.html
+++ b/demo/index.html
@@ -23,7 +23,7 @@
 	<h1>audioMotion-analyzer Demo</h1>
 
 	<div id="container"></div>
-	<audio id="audio" src="https://ia600504.us.archive.org/5/items/ChuckBerry-SchoolDays/ChuckBerry-SchoolDays.mp3" controls crossorigin="anonymous"></audio>
+	<audio id="audio" controls></audio>
 
 	<p>
 		<select id="mode">
@@ -62,6 +62,11 @@
 		<button id="btn_scale">Scale</button>
 		<button id="btn_lores">Lo-Res</button>
 		<button id="btn_fps">Frame rate</button>
+	</p>
+
+	<p>
+		Load a song:
+		<input type="file" id="uploadFile">
 	</p>
 
 	<p>
