Improve logo position in the demo and add option to turn it off.

--- a/demo/index.html
+++ b/demo/index.html
@@ -62,6 +62,7 @@
 		<button id="btn_scale">Scale</button>
 		<button id="btn_lores">Lo-Res</button>
 		<button id="btn_fps">Frame rate</button>
+		<button id="btn_logo">Logo</button>
 	</p>
 
 	<p>
