Replace highSens option for minDb and maxDb.

--- a/demo/index.html
+++ b/demo/index.html
@@ -51,6 +51,8 @@
 			<option data-min="100" data-max="10000">100Hz - 10KHz</option>
 		</select>
 
+		Sensitivity: <input type="range" id="sensitivity" min="0" max="4" value="2">
+
 		<button id="btn_fullscr">Fullscreen</button>
 		<button id="btn_freeze">Freeze</button>
 	</p>
