--- a/demo/index.html
+++ b/demo/index.html
@@ -16,6 +16,9 @@
 			display: block;
 			width: 100%;
 		}
+		#sensitivity {
+			width: 100px;
+		}
 	</style>
 </head>
 
@@ -52,9 +55,6 @@
 		</select>
 
 		Sensitivity: <input type="range" id="sensitivity" min="0" max="4" value="2">
-
-		<button id="btn_fullscr">Fullscreen</button>
-		<button id="btn_freeze">Freeze</button>
 	</p>
 
 	<p>
@@ -65,6 +65,8 @@
 		<button id="btn_lores">Lo-Res</button>
 		<button id="btn_fps">Frame rate</button>
 		<button id="btn_logo">Logo</button>
+		<button id="btn_freeze">Freeze</button>
+		<button id="btn_fullscr">Fullscreen</button>
 	</p>
 
 	<p>
