Improve demo's responsive layout.

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>audioMotion-analyzer Demo</title>
 	<link href="https://fonts.googleapis.com/css?family=Orbitron:700" rel="stylesheet">
 	<style>
@@ -10,6 +11,7 @@
 			padding: 6px;
 		}
 		#audio,	#container {
+			max-width: 100%;
 			width: 640px;
 		}
 		#container canvas {
