--- a/demo/index.html
+++ b/demo/index.html
@@ -34,12 +34,14 @@
 		<select id="mode">
 			<option value="" disabled>Visualization Mode:</option>
 			<option value="0">Discrete frequencies</option>
-			<option value="24">Full-octave bands</option>
-			<option value="12">Half-octave bands</option>
-			<option value="8">1/3rd-octave bands</option>
-			<option value="4" selected>1/6th-octave bands</option>
-			<option value="2">1/12th-octave bands</option>
-			<option value="1">1/24th-octave bands</option>
+			<option value="1">1/24th octave bands</option>
+			<option value="2">1/12th octave bands</option>
+			<option value="3">1/8th octave bands</option>
+			<option value="4" selected>1/6th octave bands</option>
+			<option value="5">1/4th octave bands</option>
+			<option value="6">1/3rd octave bands</option>
+			<option value="7">Half octave bands</option>
+			<option value="8">Full octave bands</option>
 		</select>
 
 		<select id="gradient">
