Rewrote module as a proper class.

--- a/demo/index.html
+++ b/demo/index.html
@@ -74,10 +74,10 @@
 	</p>
 
 	<p>
-		Load an audio file from your PC:
+		Load an audio file from your computer:
 		<input type="file" id="uploadFile" accept="audio/*"><br>
-		Load a song or stream from an URL:
-		<input type="text" id="fileURL" size="50"> <button id="loadFromURL">Load</button>
+		Load audio file or stream from an URL:
+		<input type="text" id="remoteURL" size="50"> <button id="loadFromURL">Load</button>
 	</p>
 
 	<p>
