Fix links to demo directory.

--- a/demo/multi.html
+++ b/demo/multi.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<h1>audioMotion-analyzer multi-instance demo <a class="header-link" href="README.md">&larr; Demo home</a></h1>
+	<h1>audioMotion-analyzer multi-instance demo <a class="header-link" href="https://hvianna.github.io/audioMotion-analyzer/demo/">&larr; Demo home</a></h1>
 
 	<div id="analyzer-block">
 		<div class="main">
