--- a/demo/multi.html
+++ b/demo/multi.html
@@ -26,7 +26,7 @@
 		Load an audio file from your computer:
 		<input type="file" id="uploadFile" accept="audio/*"><br>
 		Load audio file or stream from an URL:
-		<input type="text" id="remoteURL" size="50" value="http://a1rj.streams.com.br:7801/stream"> <button id="loadFromURL">Load</button>
+		<input type="text" id="remoteURL" size="50" placeholder="https://..."> <button id="loadFromURL">Load</button>
 	</p>
 
 	<div class="analyzer-configuration center">
