Add area fill mode to the demos and improve the pulsating logo code.

--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -25,6 +25,7 @@
 		<select id="mode">
 			<option value="" disabled>Visualization Mode:</option>
 			<option value="0">Discrete frequencies</option>
+			<option value="10">Area fill</option>
 			<option value="1">1/24th octave bands</option>
 			<option value="2">1/12th octave bands</option>
 			<option value="3">1/8th octave bands</option>
