--- a/demo/multi.html
+++ b/demo/multi.html
@@ -90,6 +90,7 @@
 			<button id="btn_bgcolor">Background</button>
 			<button id="btn_peaks">Peaks</button>
 			<button id="btn_leds">LEDs</button>
+			<button id="btn_lumi">Lumi Bars</button>
 			<button id="btn_scale">Scale</button>
 			<button id="btn_lores">Lo-Res</button>
 			<button id="btn_fps">Frame rate</button>
