Update demo bundles.

--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<h1>audioMotion-analyzer fluid demo <a class="header-link" href="https://hvianna.github.io/audioMotion-analyzer/demo/">&larr; Demo home</a></h1>
+	<h1>audioMotion-analyzer fluid demo <a class="header-link" href="https://audiomotion.dev/demo/">&larr; Demo home</a></h1>
 
 	<div id="container"></div>
 	<audio id="audio" controls crossorigin="anonymous"></audio>
