--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -67,6 +67,14 @@
 		<span class="slider">Smoothing:<br>
 			<input type="range" id="smoothing" min="0" max=".9" step=".1">
 		</span>
+
+		<span class="slider">Line width:<br>
+			<input type="number" id="line_width" min="0" max="255" step="1" value="0">
+		</span>
+
+		<span class="slider">Fill opacity:<br>
+			<input type="number" id="fill_alpha" min="0" max="1" step=".05" value="1">
+		</span>
 	</p>
 
 	<p class="center">
@@ -96,7 +104,7 @@
 	</p>
 
 	<div class="credits">
-		<strong>audioMotion-analyzer</strong> Copyright &copy; 2018-2019 Henrique Avila Vianna.	Source code available on <a href="https://github.com/hvianna/audioMotion-analyzer">GitHub</a>.
+		<strong>audioMotion-analyzer</strong> Copyright &copy; 2018-2020 Henrique Avila Vianna.	Source code available on <a href="https://github.com/hvianna/audioMotion-analyzer">GitHub</a>.
 	</div>
 
 	<script src="demo.js"></script>
