--- a/demo/multi.html
+++ b/demo/multi.html
@@ -31,13 +31,14 @@
 
 	<div class="analyzer-configuration center">
 
-		<p>Selected analyzer:
+		<div class="selector">
+			Selected analyzer:
 			<label><input type="radio" name="analyzer" value="0" checked> Main &nbsp;</label>
 			<label><input type="radio" name="analyzer" value="1"> Top &nbsp;</label>
 			<label><input type="radio" name="analyzer" value="2"> Bottom</label>
-		</p>
+		</div>
 
-		<div>
+		<div class="box">
 			<label class="label">Visualization Mode
 				<select id="mode">
 					<option value="0">Discrete frequencies</option>
@@ -103,7 +104,7 @@
 			</label>
 		</div>
 
-		<p>
+		<div class="box">
 			<button id="btn_bgcolor">Background</button>
 			<button id="btn_peaks">Peaks</button>
 			<button id="btn_leds">LEDs</button>
@@ -114,7 +115,7 @@
 			<button id="btn_logo">Logo</button>
 			<button id="btn_freeze">Freeze</button>
 			<button id="btn_fullscr">Fullscreen</button>
-		</p>
+		</div>
 
 	</div>
 
