--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -50,6 +50,30 @@
 				</label>
 			</fieldset>
 
+			<fieldset id="bar_options">
+				<label class="label">Bar spacing
+					<select id="bar_space">
+						<option value="0">None</option>
+						<option value="1">1px</option>
+						<option value="2">2px (Default)</option>
+						<option value="6">6px</option>
+						<option value="10">10px</option>
+						<option value="15">15px</option>
+						<option value="20">20px</option>
+						<option value="30">30px</option>
+						<option value=".01">1%</option>
+						<option value=".05">5%</option>
+						<option value=".1">10%</option>
+						<option value=".2">20%</option>
+						<option value=".5">50%</option>
+						<option value=".75">75%</option>
+						<option value=".999">100%</option>
+						<option value="1.5">150%</option>
+						<option value="1.9">190%</option>
+					</select>
+				</label>
+			</fieldset>
+
 			<label class="label">Gradient
 				<select id="gradient">
 					<option value="classic">Classic</option>
