--- a/demo/multi.html
+++ b/demo/multi.html
@@ -66,6 +66,24 @@
 				</label>
 			</fieldset>
 
+			<fieldset id="bar_options">
+				<label class="label">Bar spacing
+					<select id="bar_space">
+						<option value="0">None</option>
+						<option value="1">1px</option>
+						<option value="2">2px</option>
+						<option value="0.25">25%</option>
+						<option value="0.5">50%</option>
+						<option value="0.75">75%</option>
+						<option value="0.999">100%</option>
+						<option value="1.25">125%</option>
+						<option value="1.5">150%</option>
+						<option value="1.75">175%</option>
+						<option value="1.9">190%</option>
+					</select>
+				</label>
+			</fieldset>
+
 			<label class="label">Gradient
 				<select id="gradient">
 					<option value="classic">Classic</option>
