--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -24,7 +24,7 @@
 	<div class="analyzer-configuration">
 		<div class="box center">
 			<label class="label">Visualization Mode
-				<select id="mode">
+				<select id="mode" data-setting="mode">
 					<option value="0">Discrete frequencies</option>
 					<option value="10">Area fill</option>
 					<option value="1">1/24th octave bands</option>
@@ -40,19 +40,19 @@
 
 			<fieldset id="area_options">
 				<label class="label">Line width
-					<input type="range" id="line_width" min="0" max="9" step="1" value="0">
+					<input type="range" id="line_width" min="0" max="9" step="1" data-setting="lineWidth">
 					<div class="value"></div>
 				</label>
 
 				<label class="label">Fill opacity
-					<input type="range" id="fill_alpha" min="0" max="1" step=".1" value="1">
+					<input type="range" id="fill_alpha" min="0" max="1" step=".1" data-setting="fillAlpha">
 					<div class="value"></div>
 				</label>
 			</fieldset>
 
 			<fieldset id="bar_options">
 				<label class="label">Bar spacing
-					<select id="bar_space">
+					<select id="bar_space" data-setting="barSpace">
 						<option value="0">None</option>
 						<option value="1">1px</option>
 						<option value="2">2px (Default)</option>
@@ -61,13 +61,13 @@
 						<option value="15">15px</option>
 						<option value="20">20px</option>
 						<option value="30">30px</option>
-						<option value=".01">1%</option>
-						<option value=".05">5%</option>
-						<option value=".1">10%</option>
-						<option value=".2">20%</option>
-						<option value=".5">50%</option>
-						<option value=".75">75%</option>
-						<option value=".999">100%</option>
+						<option value="0.01">1%</option>
+						<option value="0.05">5%</option>
+						<option value="0.1">10%</option>
+						<option value="0.2">20%</option>
+						<option value="0.5">50%</option>
+						<option value="0.75">75%</option>
+						<option value="0.999">100%</option>
 						<option value="1.5">150%</option>
 						<option value="1.9">190%</option>
 					</select>
@@ -75,7 +75,7 @@
 			</fieldset>
 
 			<label class="label">Gradient
-				<select id="gradient">
+				<select id="gradient" data-setting="gradient">
 					<option value="classic">Classic</option>
 					<option value="prism">Prism</option>
 					<option value="rainbow">Rainbow</option>
@@ -83,7 +83,7 @@
 			</label>
 
 			<label class="label">FFT size
-				<select id="fft">
+				<select id="fft" data-setting="fftSize">
 					<option value="1024">1024</option>
 					<option value="2048">2048</option>
 					<option value="4096">4096</option>
@@ -107,22 +107,22 @@
 			</label>
 
 			<label class="label">Smoothing
-				<input type="range" id="smoothing" min="0" max=".9" step=".1">
+				<input type="range" id="smoothing" min="0" max=".9" step=".1" data-setting="smoothing">
 				<div class="value"></div>
 			</label>
 		</div>
 
 		<div class="box center">
-			<button id="btn_bgcolor">Background</button>
-			<button id="btn_peaks">Peaks</button>
-			<button id="btn_leds">LEDs</button>
-			<button id="btn_lumi">Lumi Bars</button>
-			<button id="btn_scale">Scale</button>
-			<button id="btn_lores">Lo-Res</button>
-			<button id="btn_fps">Frame rate</button>
-			<button id="btn_logo">Logo</button>
-			<button id="btn_freeze">Freeze</button>
-			<button id="btn_fullscr">Fullscreen</button>
+			<button id="btn_bgcolor" data-prop="showBgColor">Background</button>
+			<button id="btn_peaks" data-prop="showPeaks">Peaks</button>
+			<button id="btn_leds" data-prop="showLeds">LEDs</button>
+			<button id="btn_lumi" data-prop="lumiBars">Lumi Bars</button>
+			<button id="btn_scale" data-prop="showScale">Scale</button>
+			<button id="btn_lores" data-prop="loRes">Lo-Res</button>
+			<button id="btn_fps" data-prop="showFPS">Frame rate</button>
+			<button id="btn_logo" data-prop="showLogo">Logo</button>
+			<button id="btn_freeze" data-prop="isOn" data-func="toggleAnalyzer">Freeze</button>
+			<button id="btn_fullscr" data-prop="isFullscreen" data-func="toggleFullscreen">Fullscreen</button>
 		</div>
 	</div>
 
