--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -54,22 +54,15 @@
 				<label class="label">Bar spacing
 					<select id="bar_space" data-setting="barSpace">
 						<option value="0">None</option>
-						<option value="1">1px</option>
-						<option value="2">2px (Default)</option>
-						<option value="6">6px</option>
-						<option value="10">10px</option>
-						<option value="15">15px</option>
-						<option value="20">20px</option>
-						<option value="30">30px</option>
-						<option value="0.01">1%</option>
-						<option value="0.05">5%</option>
-						<option value="0.1">10%</option>
+						<option value="1">1px (legacy)</option>
+						<option value="2">2px</option>
+						<option value="0.1">10% (default)</option>
 						<option value="0.2">20%</option>
+						<option value="0.25">25%</option>
+						<option value="0.4">40%</option>
 						<option value="0.5">50%</option>
 						<option value="0.75">75%</option>
-						<option value="0.999">100%</option>
-						<option value="1.5">150%</option>
-						<option value="1.9">190%</option>
+						<option value="0.9">90%</option>
 					</select>
 				</label>
 			</fieldset>
