--- a/demo/multi.html
+++ b/demo/multi.html
@@ -70,16 +70,11 @@
 				<label class="label">Bar spacing
 					<select id="bar_space" data-setting="barSpace">
 						<option value="0">None</option>
-						<option value="1">1px</option>
-						<option value="2">2px</option>
+						<option value="1">1px (legacy)</option>
+						<option value="0.1">10% (default)</option>
 						<option value="0.25">25%</option>
 						<option value="0.5">50%</option>
 						<option value="0.75">75%</option>
-						<option value="0.999">100%</option>
-						<option value="1.25">125%</option>
-						<option value="1.5">150%</option>
-						<option value="1.75">175%</option>
-						<option value="1.9">190%</option>
 					</select>
 				</label>
 			</fieldset>
