--- a/demo/multi.html
+++ b/demo/multi.html
@@ -42,7 +42,7 @@
 			<label class="label">Visualization Mode
 				<select id="mode" data-setting="mode">
 					<option value="0">Discrete frequencies</option>
-					<option value="10">Area fill</option>
+					<option value="10">Line / Area graph</option>
 					<option value="1">1/24th octave bands</option>
 					<option value="2">1/12th octave bands</option>
 					<option value="3">1/8th octave bands</option>
