--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -9,7 +9,13 @@
 </head>
 
 <body>
-	<h1>audioMotion-analyzer fluid demo <a class="header-link" href="https://audiomotion.dev/demo/">&larr; Demo home</a></h1>
+	<header>
+		<h1>audioMotion-analyzer fluid layout demo</h1>
+		<ul class="header-nav">
+			<li><a href="multi.html">Multi-instance demo</a></li>
+			<li><a href="https://github.com/hvianna/audioMotion-analyzer/blob/develop/src/demo.js">View on GitHub</a></li>
+		</ul>
+	</header>
 
 	<div id="container"></div>
 	<audio id="audio" controls crossorigin="anonymous"></audio>
