--- a/demo/multi.html
+++ b/demo/multi.html
@@ -9,7 +9,13 @@
 </head>
 
 <body>
-	<h1>audioMotion-analyzer multi-instance demo <a class="header-link" href="https://audiomotion.dev/demo/">&larr; Demo home</a></h1>
+	<header>
+		<h1>audioMotion-analyzer multi-instance demo</h1>
+		<ul class="header-nav">
+			<li><a href="fluid.html">Fluid layout demo</a></li>
+			<li><a href="https://github.com/hvianna/audioMotion-analyzer/blob/develop/src/demo-multi.js">View on GitHub</a></li>
+		</ul>
+	</header>
 
 	<div id="analyzer-block">
 		<div class="main">
