--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -162,7 +162,7 @@
 	</div>
 
 	<div class="credits">
-		<strong>audioMotion-analyzer</strong> Copyright &copy; 2018-2020 Henrique Avila Vianna.	Source code available on <a href="https://github.com/hvianna/audioMotion-analyzer">GitHub</a>.
+		<strong>audioMotion-analyzer v<span id="version"></span></strong> Copyright &copy; 2018-2020 Henrique Avila Vianna.	Source code available on <a href="https://github.com/hvianna/audioMotion-analyzer">GitHub</a>.
 	</div>
 
 	<script src="demo.js"></script>
