Revert "Add demo video."
This reverts commit 34af494aee697f525e33e67964e786c1cddcc06a.

--- a/demo/index.html
+++ b/demo/index.html
@@ -31,11 +31,7 @@
 
     <p>This demo shows three analyzer instances that share the same audio element and context, but each with its own configuration and visualization options.</p>
 
-    <p><a href="multi.html">
-        <video autoplay loop muted>
-            <source src="demo.mp4" type="video/mp4">
-        </video>
-    </a></p>
+    <p><a href="multi.html"><img src="demo.gif"></a></p>
 
     <p class="big"><a href="multi.html">▶ <strong>VIEW DEMO</strong></a></p>
 
