Implement Reflex effect.

--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -116,6 +116,7 @@
 			<button id="btn_peaks" data-prop="showPeaks">Peaks</button>
 			<button id="btn_leds" data-prop="showLeds">LEDs</button>
 			<button id="btn_lumi" data-prop="lumiBars">Lumi Bars</button>
+			<button id="btn_reflex" data-prop="reflex">Reflex</button>
 			<button id="btn_scale" data-prop="showScale">Scale</button>
 			<button id="btn_lores" data-prop="loRes">Lo-Res</button>
 			<button id="btn_fps" data-prop="showFPS">Frame rate</button>
